tests/snapshots/it_api__auth_login_failed.snap
---
source: tests/it_api.rs
expression: response.entity_value()
---
[
  "404 Not Found",
  {
    "message": "Entity not found.",
    "status": "error"
  }
]
