tests/snapshots/it_api__auth_login_success.snap
---
source: tests/it_api.rs
expression: response.entity_value()
---
[
  "200 OK",
  {
    "payload": {
      "id": 1,
      "username": "me"
    },
    "status": "ok"
  }
]
