tests/snapshots/it_api__auth_logout_success.snap
---
source: tests/it_api.rs
expression: response.entity_value()
---
[
  "401 Unauthorized",
  {
    "message": "Unauthorized.",
    "status": "error"
  }
]
