tests/snapshots/it_api__get_categories_with_feeds.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": [
      {
        "category": {
          "id": 1,
          "title": "General"
        },
        "feeds": [
          {
            "feed": "http://127.0.0.1:8080/mock/rss/hacker_news.xml",
            "id": 1,
            "kind": "RSS",
            "link": "https://news.ycombinator.com",
            "title": "Hacker News"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/rss/stopgame.xml",
            "id": 3,
            "kind": "RSS",
            "link": "https://stopgame.ru/",
            "title": "StopGame"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/rss/xkcd.xml",
            "id": 2,
            "kind": "RSS",
            "link": "https://xkcd.com",
            "title": "xkcd"
          }
        ]
      },
      {
        "category": {
          "id": 2,
          "title": "Development"
        },
        "feeds": [
          {
            "feed": "http://127.0.0.1:8080/mock/atom/github_rocket_releases.atom",
            "id": 6,
            "kind": "Atom",
            "link": "https://github.com/SergioBenitez/Rocket/releases",
            "title": "GitHub Rocket Releases"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/atom/golang.atom",
            "id": 7,
            "kind": "Atom",
            "link": "https://blog.golang.org",
            "title": "Golang Blog"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/atom/julia_evans.atom",
            "id": 8,
            "kind": "Atom",
            "link": "https://jvns.ca",
            "title": "Julia Evans"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/rss/kotlin.xml",
            "id": 4,
            "kind": "RSS",
            "link": "https://blog.jetbrains.com/kotlin/",
            "title": "Kotlin Blog"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/rss/react.xml",
            "id": 5,
            "kind": "RSS",
            "link": "https://reactjs.org",
            "title": "React.js"
          },
          {
            "feed": "http://127.0.0.1:8080/mock/atom/rust.atom",
            "id": 9,
            "kind": "Atom",
            "link": "https://blog.rust-lang.org/",
            "title": "Rust Blog"
          }
        ]
      }
    ],
    "status": "ok"
  }
]
