tests/snapshots/it_api__get_posts_all_from_post_id.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "has_next_page": false,
      "items": [
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21744772",
          "date": "2019-12-09T17:59:35Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 9,
          "is_read": false,
          "is_read_later": false,
          "link": "https://fivebooks.com/best-books/science-2019-barbara-kiser/",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "Science Books of 2019"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21746574",
          "date": "2019-12-09T21:05:24Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 8,
          "is_read": false,
          "is_read_later": false,
          "link": "http://web.archive.org/web/20040929041451/http://www.shrovetuesdayobserved.com/flight.html",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "If All Stories Were Written Like Science Fiction Stories (2004)"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21746679",
          "date": "2019-12-09T21:16:07Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 7,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.thestar.com.my/news/regional/2019/12/09/breaking-news-russia-banned-from-2020-olympics",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "Russia Banned from 2020 Olympics"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21745389",
          "date": "2019-12-09T19:13:16Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 6,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.bbc.com/news/technology-50713723",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "E-scooter company goes bust after spending big on Facebook ads"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21741991",
          "date": "2019-12-09T12:18:47Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 5,
          "is_read": false,
          "is_read_later": false,
          "link": "https://github.com/Risk3sixty-Labs/geoapi",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "Show HN: Tiny, fast, and free API to geolocate IP addresses"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21745074",
          "date": "2019-12-09T18:35:49Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 4,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.newyorker.com/magazine/2019/12/16/how-william-gibson-keeps-his-science-fiction-real",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "How William Gibson Keeps His Science Fiction Real"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21734605",
          "date": "2019-12-08T06:21:34Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 3,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.tmakiguchi.org/geographer/asgeographer/geographyhuman.html",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "Tsunebaro Makaguchi – Education Through Interest"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21741504",
          "date": "2019-12-09T10:05:26Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 2,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.vitavonni.de/blog/201503/2015031201-the-sad-state-of-sysadmin-in-the-age-of-containers.html",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "The sad state of sysadmin in the age of containers (2015)"
        },
        {
          "category_id": 1,
          "comments_link": "https://news.ycombinator.com/item?id=21746673",
          "date": "2019-12-09T21:15:22Z",
          "feed_id": 1,
          "feed_title": "Hacker News",
          "id": 1,
          "is_read": false,
          "is_read_later": false,
          "link": "https://www.reuters.com/article/us-eu-batteries/eu-approves-3-2-billion-euro-state-aid-for-battery-research-idUSKBN1YD0WJ",
          "media_link": null,
          "read_date": null,
          "summary": "Comments",
          "title": "EU approves 3.2B euro state aid for battery research"
        }
      ]
    },
    "status": "ok"
  }
]
