tests/snapshots/it_api__get_posts_feed.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": [
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21746739",
        "date": "2019-12-09T21:22:57Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 30,
        "is_read": false,
        "is_read_later": false,
        "link": "https://en.wikipedia.org/wiki/Transputer",
        "media_link": null,
        "summary": "Comments",
        "title": "Transputer"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745731",
        "date": "2019-12-09T19:46:52Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 29,
        "is_read": false,
        "is_read_later": false,
        "link": "https://blog.cynthia.re/post/nintendo-switch-ethernet-switch",
        "media_link": null,
        "summary": "Comments",
        "title": "The Nintendo Switch Switch"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21747710",
        "date": "2019-12-09T23:13:16Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 28,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.bloomberg.com/news/articles/2019-12-09/vietnam-s-richest-man-bets-2-billion-to-sell-cars-to-americans",
        "media_link": null,
        "summary": "Comments",
        "title": "Vietnam’s Richest Man Bets $2B to Sell Cars to Americans"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743424",
        "date": "2019-12-09T15:30:35Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 27,
        "is_read": false,
        "is_read_later": false,
        "link": "https://randomascii.wordpress.com/2019/12/08/on2-again-now-in-wmi/",
        "media_link": null,
        "summary": "Comments",
        "title": "O(n^2), again, now in Windows Management Instrumentation"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21737697",
        "date": "2019-12-08T19:31:16Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 26,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.nytimes.com/2019/12/08/obituaries/caroll-spinney-dead.html",
        "media_link": null,
        "summary": "Comments",
        "title": "Caroll Spinney has died"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21742739",
        "date": "2019-12-09T14:11:22Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 25,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.sametab.com/blog/operations-and-internal-communication-strategies-for-effective-ceos",
        "media_link": null,
        "summary": "Comments",
        "title": "Operations for Effective CEOs"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21744274",
        "date": "2019-12-09T17:10:11Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 24,
        "is_read": false,
        "is_read_later": false,
        "link": "https://signal.org/blog/signal-private-group-system/",
        "media_link": null,
        "summary": "Comments",
        "title": "Technology Preview: Signal Private Group System"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21738802",
        "date": "2019-12-08T22:20:15Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 23,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.evanjones.ca/ordered-vs-unordered-indexes.html",
        "media_link": null,
        "summary": "Comments",
        "title": "Why databases use ordered indexes but programming uses hash tables"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745704",
        "date": "2019-12-09T19:43:30Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 22,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.wsj.com/articles/american-factories-demand-white-collar-education-for-blue-collar-work-11575907185",
        "media_link": null,
        "summary": "Comments",
        "title": "College-educated workers are taking over the American factory floor"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743847",
        "date": "2019-12-09T16:20:49Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 21,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.quantamagazine.org/how-simple-rules-bootstrap-the-laws-of-physics-20191209/",
        "media_link": null,
        "summary": "Comments",
        "title": "Simple Rules ‘Bootstrap’ the Laws of Physics"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743696",
        "date": "2019-12-09T15:59:55Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 20,
        "is_read": false,
        "is_read_later": false,
        "link": "https://web.archive.org/web/20030812081713/http://klausler.com/cnotes.txt",
        "media_link": null,
        "summary": "Comments",
        "title": "Some things every C programmer should know about C (2002)"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21729597",
        "date": "2019-12-07T10:55:30Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 19,
        "is_read": false,
        "is_read_later": false,
        "link": "https://emacsair.me/2017/09/01/magit-walk-through/",
        "media_link": null,
        "summary": "Comments",
        "title": "A walk through the Magit interface"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21746582",
        "date": "2019-12-09T21:06:13Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 18,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.wsj.com/articles/if-bitcoin-looks-like-it-isnt-trading-its-because-it-isnt-11575637204",
        "media_link": null,
        "summary": "Comments",
        "title": "If Bitcoin Looks Like It Isn’t Trading, It’s Because It Isn’t"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21742110",
        "date": "2019-12-09T12:45:13Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 17,
        "is_read": false,
        "is_read_later": false,
        "link": "https://johnaugust.com/2018/missing-movies",
        "media_link": null,
        "summary": "Comments",
        "title": "Missing Movies (2018)"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743100",
        "date": "2019-12-09T14:53:02Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 16,
        "is_read": false,
        "is_read_later": false,
        "link": "https://queue.acm.org/detail.cfm?id=3341158",
        "media_link": null,
        "summary": "Comments",
        "title": "Must and Must Not: On writing documentation"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21744785",
        "date": "2019-12-09T18:00:56Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 15,
        "is_read": false,
        "is_read_later": false,
        "link": "http://scholar.harvard.edu/files/mickens/files/towashitallaway.pdf",
        "media_link": null,
        "summary": "Comments",
        "title": "To Wash It All Away (2014) [pdf]"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745124",
        "date": "2019-12-09T18:41:48Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 14,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.theatlantic.com/ideas/archive/2019/11/why-child-care-so-expensive/602599",
        "media_link": null,
        "summary": "Comments",
        "title": "Why Child Care Is So Expensive"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21742702",
        "date": "2019-12-09T14:05:49Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 13,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.bloomberg.com/news/articles/2019-12-08/repo-blowup-was-fueled-by-big-banks-and-hedge-funds-bis-says",
        "media_link": null,
        "summary": "Comments",
        "title": "Repo Blowup Was Fueled by Big Banks and Hedge Funds, BIS Says"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743513",
        "date": "2019-12-09T15:41:11Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 12,
        "is_read": false,
        "is_read_later": false,
        "link": "https://jamesmunns.com/blog/fmt-unreasonably-expensive/",
        "media_link": null,
        "summary": "Comments",
        "title": "Formatting Is Unreasonably Expensive for Embedded Rust"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21742222",
        "date": "2019-12-09T13:06:35Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 11,
        "is_read": false,
        "is_read_later": false,
        "link": "https://github.com/infostreams/db",
        "media_link": null,
        "summary": "Comments",
        "title": "Show HN: Version Control for Databases"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21744772",
        "date": "2019-12-09T17:59:35Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 10,
        "is_read": false,
        "is_read_later": false,
        "link": "https://fivebooks.com/best-books/science-2019-barbara-kiser/",
        "media_link": null,
        "summary": "Comments",
        "title": "Science Books of 2019"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21743129",
        "date": "2019-12-09T14:56:35Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 9,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.wsj.com/articles/five-cities-account-for-vast-majority-of-growth-in-tech-jobs-study-finds-11575867660",
        "media_link": null,
        "summary": "Comments",
        "title": "Five cities account for vast majority of growth in U.S. tech jobs: study"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21747175",
        "date": "2019-12-09T22:10:43Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 8,
        "is_read": false,
        "is_read_later": false,
        "link": "https://blog.letsenhance.io/all/2019/07/09/computational-photographyfrom-selfies-to-black-holes/",
        "media_link": null,
        "summary": "Comments",
        "title": "Computational photography from selfies to black holes"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21744812",
        "date": "2019-12-09T18:04:21Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 7,
        "is_read": false,
        "is_read_later": false,
        "link": "http://croncolor.com",
        "media_link": null,
        "summary": "Comments",
        "title": "Show HN: Cron Color: Color Tool and Contrast Checker for Web Design"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745673",
        "date": "2019-12-09T19:40:03Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 6,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.atlasobscura.com/articles/cool-bar-montana",
        "media_link": null,
        "summary": "Comments",
        "title": "For Sale: The Only Bar in a 14-Person Montana Town"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745389",
        "date": "2019-12-09T19:13:16Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 5,
        "is_read": false,
        "is_read_later": false,
        "link": "https://www.bbc.com/news/technology-50713723",
        "media_link": null,
        "summary": "Comments",
        "title": "E-scooter company goes bust after spending big on Facebook ads"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21739000",
        "date": "2019-12-08T22:52:12Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 4,
        "is_read": false,
        "is_read_later": false,
        "link": "https://github.com/ecaron/smart-nightlight-manager",
        "media_link": null,
        "summary": "Comments",
        "title": "Show HN: My in-network Node app for controlling my kids' nightlights"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21745074",
        "date": "2019-12-09T18:35:49Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 3,
        "is_read": false,
        "is_read_later": true,
        "link": "https://www.newyorker.com/magazine/2019/12/16/how-william-gibson-keeps-his-science-fiction-real",
        "media_link": null,
        "summary": "Comments",
        "title": "How William Gibson Keeps His Science Fiction Real"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21734605",
        "date": "2019-12-08T06:21:34Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 2,
        "is_read": false,
        "is_read_later": true,
        "link": "https://www.tmakiguchi.org/geographer/asgeographer/geographyhuman.html",
        "media_link": null,
        "summary": "Comments",
        "title": "Tsunebaro Makaguchi – Education Through Interest"
      },
      {
        "category_id": 1,
        "comments_link": "https://news.ycombinator.com/item?id=21739519",
        "date": "2019-12-09T00:29:03Z",
        "feed_id": 1,
        "feed_title": "Hacker News",
        "id": 1,
        "is_read": false,
        "is_read_later": true,
        "link": "http://jpkoning.blogspot.com/2019/12/a-way-to-make-anonymous-online-donations.html",
        "media_link": null,
        "summary": "Comments",
        "title": "A way to make anonymous online donations"
      }
    ],
    "status": "ok"
  }
]
